--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,10 @@
         <div class="top">
             <div class="left">
                 <a routerLink="">YVESTSALA2022.COM</a>
-                <p class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, numquam corrupti blanditiis incidunt illum velit. Nam ad repellat rem magnam, ab quibusdam voluptas porro voluptates deserunt. Tempore facilis obcaecati nisi?</p>
+                <p class="summary">Chers basketteurs, chers amoureux de la balle orange, avec vous je veux redorer le blason du basketball camerounais.</p>
+                <p class="summary">Je suis votre candidat</p>
+                <p class="summary">Je suis l'homme de la situation</p>
+                <p class="summary">Je serais votre nouveau président</p>
                 <p class="slogan">DRAW A NEW VISION</p>
             </div>
             <div class="right">
@@ -35,7 +38,7 @@
         </div>
 
         <div class="bottom">
-            © 2022 Yves TSALA
+            © 2022 Yves Tsala
         </div>
 
         
