--- a/src/app/components/home-program/home-program.component.html
+++ b/src/app/components/home-program/home-program.component.html
@@ -1,10 +1,13 @@
 <div class="program">
     <div class="texts">
+
         <div class="header">
-            <p>Draw A New Vision</p>
-            <p>UN PETIT TEXTE ICI QUI EN DIT LONG</p>
+            <p>Draw a new vision</p>
+            <p>Une fédération au service des joueurs, des entraineurs, des officiels et des dirigeants</p>
         </div>
+
         <div class="tabs">
+
             <div class="tab" routerLink="/programme/version-courte">
                 <fa-icon [icon]="faClock"></fa-icon>
                 <div class="tab-texts">
@@ -25,7 +28,8 @@
             </div>
 
         </div>
-        <p class="call-to-donate">Soutenez le candidat Yves TSALA en <span routerLink="/faire-un-don">faisant un don</span></p>
+        
+        <p class="call-to-donate">Soutenez le candidat Yves Tsala en <span routerLink="/faire-un-don">faisant un don</span></p>
     </div>
     <img src="../../assets/img/home/program/program.png" alt="">
 </div>
