--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,11 @@
 <div class="home">
     <div class="hero">
         <div class="hero-content my-container">
-            <img src="../../assets/img/home/image.png" alt="">
+            <img src="../../../assets/img/home/image-hero.jpg" alt="">
             <div class="texts">
                 <span>Soutenons</span>
-                <h1>Yves TSALA</h1>
-                <span>Pour une jeunesse dynamique, sportive</span>
-                <span>et qui vit de ses talents !</span>
+                <h1>Yves Tsala</h1>
+                <span class="text">Pour une jeunesse dynamique, sportive et qui vit de ses talents !</span>
                 <button routerLink="/programme">Voir le programme</button>
             </div>
         </div>
@@ -15,7 +14,7 @@
     </div>
     <div class="content my-container">
         <app-home-about></app-home-about>
-        <h2><span>Découvrez</span> Les Membres De Notre Bureau</h2>
+        <h2><span>Découvrez</span> Le QG De Camapagne</h2>
         <app-infinite-scroll-argument></app-infinite-scroll-argument>
         <h2><span>Découvrez</span> Notre Programme</h2>
         <app-home-program></app-home-program>
