--- a/src/app/components/office-member-details/office-member-details.component.html
+++ b/src/app/components/office-member-details/office-member-details.component.html
@@ -4,7 +4,7 @@
         <div class="top">
             <img src={{officeMemberData.image}} alt="">
             <div class="manager-data">
-                <span class="label"> <span> Team</span> Yves TSALA 2022 </span>
+                <span class="label"> <span> Team</span> Yves Tsala 2022 </span>
                 <span class="name"> {{officeMemberData.name}} </span>
                 <span class="role"> {{officeMemberData.role}} </span>
             </div>
