--- a/src/app/components/program/program.component.html
+++ b/src/app/components/program/program.component.html
@@ -52,7 +52,7 @@
             <img src="../../../assets/img/program/imag.jpeg" alt="">
             <div class="texts">
                 <h3 class="colored">En soutenant
-                    <span>Yves TSALA</span> ,</h3>
+                    <span>Yves Tsala</span> ,</h3>
                 <p>vous pouvez porter ce programme au second tour et battre l'extrême droite dès le premier tour.</p>
                 <button routerLink="/partager-la-campagne"> <i class="pi pi-share-alt"></i>Partagez la campagne</button>
             </div>
