--- a/src/app/components/home-about/home-about.component.scss
+++ b/src/app/components/home-about/home-about.component.scss
@@ -48,6 +48,40 @@ $color: #15385c;
             }
         }
     }
+}
 
+@media all and (max-width: 880px){
 
+    .about{
+        position: unset;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 0px 0 20px 0;
+
+        img{
+            width: 95%;
+            height: 17em;
+        }
+
+        .texts{
+            transform: none;
+            position: unset;
+            background-color: white;
+            box-shadow: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin-top: 30px;
+            padding-left: 0;
+            padding-right: 0;
+
+            .header{
+                font-size: 1.3em;
+                text-align: center;
+            }
+        }
+        
+    }
 }
