--- a/src/app/components/program-long/program-long.component.scss
+++ b/src/app/components/program-long/program-long.component.scss
@@ -44,22 +44,27 @@ $colorBlue: #15385c;
     }
 
     .content{
-        padding: 5em 0; 
+        padding-top: 5em;
+        padding-bottom: 5em;
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
         width: 100%;
         height: 100%;
 
             .nav{
-                display: flex;
-                flex-direction: column;
-                width: fit-content;
+                width: 100%;
 
                 ul{
                     list-style: none;
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    align-items: center;
 
                     li{
-                        margin-bottom: 15px;
+                        margin: 0 10px 15px 10px;
+                        width: fit-content;
+                        white-space: nowrap;
 
                         button{
                             cursor: pointer;
@@ -83,6 +88,39 @@ $colorBlue: #15385c;
                     }
                 }
             
+        }
+
+        .nav-content{
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            margin-top: 75px;
+
+            img{
+                width: 25em;
+                margin-right: 140px;
+            }
+
+            .texts{
+                width: 100%;
+
+                h3{
+                    font-size: 1.6em;
+                    font-weight: 900;
+                    margin-bottom: 40px;
+                }
+
+                .data{
+                    display: flex;
+                    flex-direction: column;
+                    margin-top: 30px;
+
+                    h4{
+                        margin-bottom: 15px;
+                        font-size: 1.2em;
+                    }
+                }
+            }
         }
     }
 }
