--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -14,32 +14,32 @@
                 
                 <a class="whatsapp">
                     <i class="pi pi-whatsapp"></i> 
-                    (+237) 612345678 / (+237) 712345678
+                    +237 670 893 747
                 </a>
 
-                <a class="facebook">
+                <a class="facebook" href="https://www.facebook.com/yvestsala2022" target="_blank">
                     <i class="pi pi-facebook"></i> 
-                    @YvesTlava237
+                    @yvestsala2022
                 </a>
 
-                <a class="twitter"> 
+                <a class="twitter" href="https://twitter.com/yvestsala2022" target="_blank"> 
                     <i class="pi pi-twitter"></i> 
-                    @YvesTlava237
+                    @yvestsala2022
                 </a>
 
-                <a class="instagram"> 
+                <a class="instagram" href="https://www.instagram.com/yvestsala2022/" target="_blank"> 
                     <i class="pi pi-instagram"></i> 
-                    @YvesTlava237
+                    @yvestsala2022
                 </a>
 
                 <a>
                     <i class="pi pi-envelope"></i> 
-                    contact@yevestsala2022.com
+                    info@yvestsala2022.com
                 </a>
 
                 <a>
                     <i class="pi pi-phone"></i> 
-                    (+237) 912345678 / (+237) 712345678
+                    +237 670 893 747
                 </a>
             </div>
         </div>
