--- a/src/app/components/home-about/home-about.component.scss
+++ b/src/app/components/home-about/home-about.component.scss
@@ -33,7 +33,8 @@ $color: #15385c;
             margin: 10px 0 30px 0;
         }
 
-        button{
+        a{
+            text-decoration: none;
             padding: 10px 15px;
             background: white;
             color: $color;
